# WIMS-BFP-PROTOTYPE

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  M4-INCIDENT-WORKFLOW-DETAILS.md  Makefile  PR.md  Proposed-New-AFOR_Nov-2025 - AFOR.csv  Proposed-New-AFOR_Nov-2025.xlsx  README.md  SCHEMA_MERGE_NOTES.md  WIMS-BFP-FIX-PROMPT.md  builder-agent.md  docker-compose.yml  erd.csv  get-tokens.mjs  implementation_plan.md  patch_realm.py  qa-agent.md  sample AFOR.xlsx  spec-reviewer.md  tasks.md
.ai-context/: AGENTS.md
src/backend/: AFOR-FORMATTED.xlsx  Dockerfile  auth.py  celery_config.py  database.py  firebase-service-account.json  main.py  pyproject.toml  pytest.ini  requirements.txt  test_kc.py  wait-for-db.sh
src/backend/models/: citizen_report.py  fire_incident.py  incident_verification_history.py  security_threat_log.py  user.py
src/backend/schemas/: civilian.py  incident.py  public_incident.py
src/backend/services/: ai_service.py  analytics_read_model.py  duplicate_detection.py  keycloak_admin.py  suricata_ingestion.py
src/backend/tasks/: analytics_refresh.py  drafts.py  exports.py  monitoring.py  narrative.py  notifications.py  suricata.py
src/backend/tests/: conftest.py  test_afor_import.py  test_analyst_export.py  test_analyst_incidents_sql_contract.py  test_correction_workflow.py  test_crypto.py  test_dynamic_rate_limits.py  test_fire_incident_location.py  test_immutable_records.py  test_incident_narrative.py  test_infra_config.py  test_rate_limiting.py  test_suricata_auto_incident.py  test_suricata_ingestion.py  test_system_monitoring.py  (+1 more)
(+389 files in other folders)
