[project]
name = "wims-backend"
version = "0.1.0"
description = "WIMS-BFP FastAPI backend"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "spaces"